@@ -2,3 +2,4 @@ Current
 =======
 - Make it possible to compile without network manager support.
 - Add never show icon to the system tray configuration (bug #5613).
+- Fix a typo that prevents from getting the correct critical configuration (bug #5619).
