@@ -1,3 +1,10 @@
+2009-07-30: Ali aliov@xfce.org
+	* Fix a typo that prevents from getting the correct 
+	critical configuration.
+	* Emit a warning and exit normally if failed to register
+	DBus names instead of exiting abnormally so the session
+	will try to restart us.
+
 2009-07-27: Ali aliov@xfce.org
 	* src/xfpm-battery.c don't notify when starting up.
 	* src/xfpm-engine.c fix a typo output message.
